Noteworthy changes in version 2.0.3 (unreleased)
------------------------------------------------

 * Interface changes relative to the 2.0.2 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ASSUAN_FORCE_CLOSE       NEW.
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


Noteworthy changes in version 2.0.2 (2011-06-16)
------------------------------------------------

 * A new flag may now be used to convey comments via assuan_transact.

 * A new flag value may now be used to disable logging.

 * The gpgcedev.c driver now provides a log device.

 * It is now possible to overwrite socket and connect functions in
   struct assuan_system_hooks.

 * Interface changes relative to the 2.0.1 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ASSUAN_CONVEY_COMMENTS   NEW.
 ASSUAN_NO_LOGGING        NEW.
 assuan_system_hooks_t	  CHANGED: Added socket and connect members.
 ASSUAN_SYSTEM_HOOKS_VERSION  CHANGED: Bumped to 2.
 assuan_register_pre_cmd_notify  NEW.
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


Noteworthy changes in version 2.0.1 (2010-08-09)
------------------------------------------------

 * Support for WindowsCE.

 * Input and output notification handler can now really access the
   parsed fd as stated in the manual.

 * Cleaned up the logging.

 * Interface changes relative to the 2.0.0 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 assuan_free               NEW.
 _assuan_w32ce_create_pipe NEW.
 ASSUAN_LOG_CONTROL        NEW.
 ASSUAN_NO_LOGGING         NEW.
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


Noteworthy changes in version 2.0.0 (2010-01-08)
------------------------------------------------

 * Now using libtool and builds a DSO.

 * Lots of interface cleanups.  See below for details of the most
   important changes.  Here is a quick note on how to upgrade:

   For each invocation of the connect or server functions, allocate a